# warlock

./: .env-example  .gitignore  AGENTS.md  README.md  courses-example.yaml  pyproject.toml
src/fazuh/warlock/: __init__.py  __main__.py  bot.py  config.py  error.py  model.py  test_manager.py
src/fazuh/warlock/module/: auto_fill.py  schedule_update_tracker.py  track.py  war_bot.py
src/fazuh/warlock/module/schedule/: cache.py  diff.py  notifier.py  parser.py
src/fazuh/warlock/service/: irs_service.py
src/fazuh/warlock/siak/: path.py  siak.py
tests/: conftest.py  test_bot.py  test_irs_fill.py  test_issue_keyerror.py  test_schedule_tracker.py
tests/libs/: test_manager.py
tests/manual/: test_autofill_manual.py
tests/mock/: irs_page.html  schedule_page.html
tests/module/schedule/: test_diff.py  test_notifier.py  test_parser.py
tests/webhook/: test_tracker_chunking_webhook.py  test_tracker_webhook.py
